--- a/shopping.html
+++ b/shopping.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- https://www.w3schools.com/bootstrap/bootstrap_get_started.asp -->
-        <title>Shopping List Application</title>
+        <title>Shopping List</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/shoppingstyle.css">        
     </head>
