--- a/shopping.html
+++ b/shopping.html
@@ -89,5 +89,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/shopping.js?x=2" type=text/javascript></script>
+        <script src="js/model.js?x=2" type=text/javascript></script>
     </body>
 </html>
